--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,14 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    
+    <div style="width:50%;margin:0 auto;text-align: center;">
+      <h1>Hi Angkel! You made it up here. Congrats!</h1>
+      <h2>Use me anytime you want as a prize</h2>
+      <img src="%PUBLIC_URL%/welcome.png" alt="">
+    </div>
+    
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
